--- a/Public/index.html
+++ b/Public/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>teste</h1>
     <a href="http://localhost:3000/livros/addLivro.html">botão</a>
+    <a href="http://localhost:3000/alunos/cadastro.html">cadastro</a>
 </body>
 </html>
