index/presença adicionados

--- a/Public/index.html
+++ b/Public/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title> Biblioteca SENAI 103 </title>
 </head>
 <body>
-    <h1>teste</h1>
-    <a href="http://localhost:3000/livros/addLivro.html">botão</a>
-    <a href="http://localhost:3000/alunos/cadastro.html">cadastro</a>
+    <!-- <img src="img/senai.png" alt="" id="logo"> -->
+    <h1> Biblioteca SENAI 103 </h1>
+    <img src="img/ULWr.gif" alt="" id="fundo">
+    <div class="login">
+        <img src="img/senai.png" alt="">
+        <form action="">
+            <div id="inputs">
+                <input type="text" placeholder="Login">
+                <input type="password" placeholder="Senha">
+                <button> Entrar </button>
+            </div>
+        </form>
+    </div>
+    <div class="rodape">
+        <div id="space"></div>
+        <h3> © SENAI-SP - 2024 </h3>
+        <a href="presença.html"><button> Presença </button></a>
+    </div>
+
 </body>
 </html>
