--- a/Public/index.html
+++ b/Public/index.html
@@ -9,5 +9,6 @@
     <h1>teste</h1>
     <a href="http://localhost:3000/livros/addLivro.html">botão</a>
     <a href="http://localhost:3000/alunos/cadastro.html">cadastro</a>
+    <a href="http://localhost:3000/alunos/presenca.html">presença</a>
 </body>
 </html>
