--- a/Public/alunos/presença.html
+++ b/Public/alunos/presença.html
@@ -17,11 +17,11 @@
         <div id="linha"></div>
     </div>
     <div class="login">
-        <form>
+        <form id="presencaForm">
             <div id="linha"></div>
             <h1>E-mail</h1>
             <input type="email" id="email">
-            <a href="http://localhost:3000/alunos/cadastro"> Caso não possua cadastro , clique aqui </a>
+            <a href="http://localhost:3000/alunos/cadastro.html"> Caso não possua cadastro , clique aqui </a>
             <button type="submit"> Enviar </button>
             <div id="linha"></div>
         </form>
