--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
     <div class="rodape">
         <div id="space"></div>
         <h3> © SENAI-SP - 2024 </h3>
-        <a href="presença.html"><button> Presença </button></a>
+        <a href="http://localhost:3000/alunos/presença.html"><button> Presença </button></a>
     </div>
 
 </body>
