--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -35,7 +35,7 @@
                     headers: {'Content-Type': 'application/json' },
                     body: JSON.stringify(cadastro)
                 });
-                const message = await response.text()
+                const message = await response.text();
                 alert(message);
             } catch (error) {
                 alert('Erro ao enviar dados: ' + error.message);
