--- a/Public/alunos/presença.html
+++ b/Public/alunos/presença.html
@@ -22,7 +22,7 @@
             <h1>E-mail</h1>
             <input type="email" id="email">
             <a href="http://localhost:3000/alunos/cadastro.html"> Caso não possua cadastro , clique aqui </a>
-            <button type="submit"> Enviar </button>
+            <button type="submit"> Marcar presença </button>
             <div id="linha"></div>
         </form>
     </div>
