--- a/Public/livros/addLivro.html
+++ b/Public/livros/addLivro.html
@@ -13,7 +13,7 @@
     <div class="le">
         <a href=""><h1>Livros</h1></a>
         <a href=""><h1>Empréstimos</h1></a>
-        <a href=""><h1>Presença</h1></a>
+        <a href="http://localhost:3000/alunos/presença.html"><h1>Presença</h1></a>
     </div>
     <main>
         <form id="livroForm">
