--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="ULWr.gif" alt="" id="fundo">
+    <img src="http://localhost:3000/img/ULWr.gif" alt="" id="fundo">
     <div class="senai">
-        <a href=""><img src="senai.png" alt=""></a>
+        <a href=""><img src="http://localhost:3000/img/senai.png" alt=""></a>
     </div>
     <div id="title">
         <div id="linha"></div>
@@ -37,7 +37,7 @@
         <div id="linha"></div>
     </form>
     <div class="voltar">
-        <a href=""><img src="voltar.png" alt=""></a>
+        <a href="http://localhost:3000/alunos/presença.html"><img src="http://localhost:3000/img/voltar.png" alt=""></a>
     </div>
 
     <script>
