--- a/Public/alunos/presença.html
+++ b/Public/alunos/presença.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="logo">
-        <img src="image 5.png" alt="">
+        <img src="http://localhost:3000/img/senai.png" alt="">
     </div>
-    <img src="image 6.png" alt="" id="fundo">
+    <img src="http://localhost:3000/img/ULWr.gif" alt="" id="fundo">
     <div id="title">
         <div id="linha"></div>
          <h1>Lista de presença Biblioteca </h1>
