--- a/Public/alunos/cadastro.html
+++ b/Public/alunos/cadastro.html
@@ -33,7 +33,7 @@
                 <option value="1">DevT</option>
             </select>
         </div>
-        <button type="submit">Cadastrar</button>
+        <a href="http://localhost:3000/alunos/presença.html"><button type="submit">Cadastrar</button></a>
         <div id="linha"></div>
     </form>
     <div class="voltar">
