--- a/Public/index.html
+++ b/Public/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Biblioteca SENAI 103 </title>
+    <title>Biblioteca SENAI 103</title>
 </head>
 <body>
-    <h1> Biblioteca SENAI 103 </h1>
+    <h1>Biblioteca SENAI 103</h1>
     <img src="img/ULWr.gif" alt="" id="fundo">
     <div class="login">
         <img src="img/senai.png" alt="">
-        <form action="">
+        <form id="form-login" onsubmit="entrar(event)">
             <div id="inputs">
-                <input type="text" placeholder="Login">
-                <input type="password" placeholder="Senha">
-                <button> Entrar </button>
+                <input type="text" placeholder="Login" id="login" required>
+                <input type="password" placeholder="Senha" id="senha" required>
+                <button type="submit">Entrar</button>
+                <div id="resposta"></div>
             </div>
         </form>
     </div>
     <div class="rodape">
         <div id="space"></div>
-        <h3> © SENAI-SP - 2024 </h3>
-        <a href="http://localhost:3000/alunos/presença.html"><button> Presença </button></a>
+        <h3>© SENAI-SP - 2024</h3>
+        <a href="http://localhost:3000/alunos/presença.html"><button>Presença</button></a>
     </div>
+    <script>
+        // Função para validar login
+        function entrar(event) {
+            event.preventDefault(); // Impede o envio do formulário
 
+            // Obtém os valores dos campos de login e senha
+            const login = document.getElementById('login').value;
+            const senha = document.getElementById('senha').value;
+            const resposta = document.getElementById('resposta');
+
+            // Valida a combinação de login e senha
+            if (login === 'silvia@gmail.com' && senha === 'Biblioteca') {
+                window.location.href = 'http://localhost:3000/alunos/verPresenca.html';
+            } else {
+                resposta.textContent = 'Login ou senha incorretos!';
+            }
+        }
+    </script>
 </body>
 </html>
