--- a/Public/livros/addEmprestimo.html
+++ b/Public/livros/addEmprestimo.html
@@ -49,7 +49,7 @@
             const emprestimo = {    // criação do objeto com os inputs do form
                 ID_Titulo: document.getElementById('searchableSelect').value,
                 Email: document.getElementById('Email').value,
-                Data_Devolucao: document.getElementById('Data_de_devolucao').value
+                Data_Devolucao: document.getElementById('Data_de_Devolucao').value
             };
   
             try {
