--- a/Public/livros/addLivro.html
+++ b/Public/livros/addLivro.html
@@ -12,7 +12,7 @@
     </header>
     <div class="le">
         <a href="http://localhost:3000/livros/emprestimo.html"><h1>Livros</h1></a>
-        <a href="http://localhost:3000/livros/livros.html"><h1>Empréstimos</h1></a>
+        <a href="http://localhost:3000/livros/addEmprestimo.html"><h1>Empréstimos</h1></a>
         <a href="http://localhost:3000/alunos/presença.html"><h1>Presença</h1></a>
     </div>
     <main>
