--- a/Public/alunos/presença.html
+++ b/Public/alunos/presença.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="logo">
-        <img src="http://localhost:3000/img/senai.png" alt="">
+        <a href="http://localhost:3000/index.html"><img src="http://localhost:3000/img/senai.png" alt=""></a>
     </div>
     <img src="http://localhost:3000/img/ULWr.gif" alt="" id="fundo">
     <div id="title">
